<resources>
    <string name="app_name" translatable="false">QKing</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_pantry">Pantry</string>
    <string name="title_shoppinglist">Shopping List</string>
    <string name="title_menu">Menu</string>
    <string name="title_product_profile">Product Profile</string>
    <string name="title_new_product">New Product</string>
    <string name="expiring_button">See all</string>
    <string name="expiring_products">Expiring Products</string>
    <string name="category_product">Categories</string>
    <string name="pantry_categories_fruits_and_vegetables">Fruits and Vegetables</string>
    <string name="pantry_categories_meat">Meat</string>
    <string name="recipes_categories_title">Categories</string>
    <string name="recipes_menu_title">Cooking time</string>
    <string name="recipes_categories_appetizers">Appetizers</string>
    <string name="recipes_categories_first_courses">First Courses</string>
    <string name="recipes_categories_main_courses">Main Courses</string>
    <string name="recipes_categories_desserts">Desserts</string>
    <string name="recipes_categories_side_dishes">Side Dishes</string>
    <string name="recipes_categories_single_courses">Single Courses</string>
    <string name="recipes_categories_condiments">Condiments</string>
    <string name="recipes_categories_bread_and_pizza">Bread and Pizza</string>
    <string name="recipes_categories_drinks">Drinks</string>
    <string name="recipes_categories_see_all">See All</string>
    <string name="new_product_scan_the_barcode">Scan the barcode</string>
    <string name="new_product_divider_text">or</string>
    <string name="new_product_input_name">Name</string>
    <string name="new_product_input_category">Category</string>
    <string name="new_product_input_expiration_date">Expiration date</string>
    <string name="pantry_categories_fish">Fish</string>
    <string name="pantry_categories_pasta_and_rice">Pasta and rice</string>
    <string name="pantry_categories_milk_and_cheese">Milk and cheese</string>
    <string name="pantry_categories_ice_cream_and_frozen_food">Ice cream and frozen food</string>
    <string name="pantry_categories_bread_and_pizza">Bread and pizza</string>
    <string name="pantry_categories_breakfast_and_sweets">Breakfast and sweets</string>
    <string name="pantry_categories_oil_and_condiments">Oil and condiments</string>
    <string name="pantry_categories_water_and_drinks">Water and drinks</string>
    <string name="pantry_categories_see_all">See all</string>
    <string name="error_empty_field">This field can not be blank</string>
    <string name="error_not_a_category">Select one of the categories</string>
    <string name="scanner_alert_dialog_title">Barcode scanned</string>
    <string name="scanner_alert_dialog_data_source_label">Data provided by</string>
    <string name="category_product_profile">Category</string>
    <string name="quantity_product_profile">Quantity</string>
    <string name="brand_product_profile">Brand</string>
    <string name="expiring_product_profile">Expiring</string>
    <string name="purchase_date_product_profile">Purchase</string>
    <string name="item_shopping_list">Shopping item</string>
    <string name="item_counter_shopping_list">1</string>
    <string name="remaining_day">days remaining</string>
    <string name="new_product_input_purchase_date">Purchase date</string>
    <string name="new_product_input_brand">Brand</string>
    <string name="title_preferences">Preferences</string>
    <string name="preferences_appearance">Appearance</string>
    <string name="preferences_dark_mode_title">Dark mode</string>
    <string name="preferences_image_icon_title">Show image (icon)</string>
    <string name="preferences_image_icon_summary">Show image of the product instead of the icon of the category</string>
    <string name="preferences_image_thumbnail_title">Show image (thumbnail)</string>
    <string name="preferences_image_thumbnail_summary">Show image of the product instead of the thumbnail of the category</string>
    <string name="preferences_about">About</string>
    <string name="preferences_version_title">Version</string>
    <string name="preferences_developer_title">Developer</string>
    <string name="preferences_developer_summary" translatable="false">Gruppo Pape @ Unimib - Matteo Sangalli, Mattia Sgro, Giuseppe Ziccardi</string>
    <string name="preferences_feedback_title">Send feedback</string>
    <string name="preferences_feedback_summary">Report technical issues or suggest new features</string>
    <string name="preferences_general">General</string>
    <string name="api_key_ebay" translatable="false">ebay</string>
    <string name="api_key_off" translatable="false">off</string>
    <string name="preferences_barcode_api_title">Select barcode Api</string>
    <string name="api_text_off" translatable="false">Open Food Facts</string>
    <string name="api_text_ebay" translatable="false">Ebay</string>
    <string name="new_product_toast_success">Product added successfully</string>
    <string name="new_recipe_input_name">Recipe Name</string>
    <string name="new_recipe_input_category">Category</string>
    <string name="new_recipe_input_insert_date">Insert Date</string>
    <string name="recipe_ingredients_button_remove">remove</string>
    <string name="new_recipe_fragment">New Recipe</string>
    <string name="new_recipe_toast_succes">New Recipe Successfully Added</string>
    <string name="product_expired_today">Expired today</string>
    <string name="product_expired_from">"Expired from "</string>
    <string name="days"> days</string>
    <string name="shopping_list_dialog_title">Add to shopping list</string>
    <string name="item_shopping_list_delete">Delete item</string>
    <string name="shopping_list_dialog_name">Product name</string>
    <string name="shopping_list_dialog_quantity">Quantity</string>
    <string name="measure_unit_piece_abbreviation">pc.</string>
    <string name="product_added_to_shopping_list">Product added to shopping list</string>
    <string name="product_removed_from_shopping_list">Product removed from shopping list</string>
    <string name="added_to_shopping_list">added to shopping list</string>
    <string name="removed_from_shopping_list">removed from shopping list</string>
    <string name="Undo">Undo</string>
    <string name="Delete">Delete</string>
    <string name="item_new_recipe_delete">Recipe successfully deleted</string>
    <string name="removed_from_products">removed from products</string>
    <string name="category_recipe_profile">Category</string>
    <string name="menu_dialog_name">Recipe name</string>
    <string name="Add_to_shopping_list_swipe">Add</string>
    <string name="menu_dialog_title">Add to menu</string>
    <string name="menu_add_recipe">Add recipe</string>
    <string name="preferences_notifications">Notifications</string>
    <string name="preferences_notifications_launch_dinner">Notications launch/dinner</string>
    <string name="preferences_notifications_launch_dinner_summary">Remind me today\'s menu</string>
    <string name="launch_dinner_notifications_channel">Launch/dinner reminders</string>
    <string name="notification_lunch_time">Lunch time!</string>
    <string name="notification_dinner_time">Dinner time!</string>
    <string name="notification_scheduled_recipes_0">There are no planned recipes. Explore your recipes!</string>
    <string name="notification_scheduled_recipes_1">You planned %1$s for today. Enjoy your meal!</string>
    <string name="notification_scheduled_recipes_2">You planned %1$s and %2$s for today. Enjoy your meal!</string>
    <string name="shopping_list_empty_text">Shopping list is empty</string>
    <string name="removed_from_recipes">removed from recipes</string>
    <string name="product_list_empty_text">Product list is empty</string>
    <string name="expiring_product_list_empty_text">There are no expiring products</string>
    <string name="recipe_list_empty_text">Recipe list is empty</string>
    <string name="menu_dialog_delete_title">Do you want to delete this recipe?</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="title_product_list">Product List</string>
    <string name="new_recipe_quantity">Quantity</string>
    <string name="product_dialog_delete_title">Do you want to delete this product?</string>
    <string name="recipe_dialog_delete_title">Do you want to delete this recipe?</string>
    <string name="barcode">Barcode</string>
    <string name="error_greater_than_zero">Insert a value greater than 0</string>
    <string name="contact_developer_uri" translatable="false">mailto:m.sangalli9@campus.unimib.it,m.sgro2@campus.unimib.it,g.ziccardi@campus.unimib.it</string>
    <string name="scanner_dialog_product_name_label_text_view">Product name:</string>
    <string name="scanner_dialog_product_name_value_text_view">productName Placeholder</string>
    <string name="scanner_dialog_generic_name_label_text_view">Generic name:</string>
    <string name="scanner_dialog_generic_name_value_text_view">genericName Placeholder</string>
    <string name="scanner_dialog_brand_label_text_view">Brand:</string>
    <string name="scanner_dialog_brand_value_text_view">brand placeholder</string>
    <string name="scanner_dialog_code_label_text_view">Code:</string>
    <string name="scanner_dialog_code_value_text_view">10452040421</string>
    <string name="category_name_placeholder">Category Name</string>
    <string name="product_name_placeholder">Product Name</string>
    <string name="days_remaining_placeholder">some days remaining</string>
    <string name="new_product_image_add_button_text">Add an Image</string>
    <string name="new_recipe_data_text_view">Date</string>
    <string name="recipe_ingredients_title_text_view">Ingredients</string>
    <string name="new_recipe_add_button_text_view">Add</string>
    <string name="recipe_step_title_text_view">Steps</string>
    <string name="data_placeholder">dd/mm/yyyy</string>
    <string name="recipe_title_placeholder">Title</string>
    <string name="recipe_category_placeholder">Categoria</string>
    <string name="sheet_dialog_picture_text">Take a Photo</string>
    <string name="sheet_dialog_gallery_text">Pick from Gallery</string>
    <string name="search_text">Search</string>
    <string name="add_text">Add</string>
</resources>
