<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_shoppinglist"
        android:icon="@drawable/baseline_list_alt_24"
        android:title="@string/title_shoppinglist" />
    <item
        android:id="@+id/navigation_pantry"
        android:icon="@drawable/baseline_kitchen_24"
        android:title="@string/title_pantry" />
    <item
        android:id="@+id/navigation_recipes"
        android:icon="@drawable/baseline_restaurant_menu_24"
        android:title="@string/title_recipes" />
    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/baseline_menu_book_24"
        android:title="@string/title_menu" />
    <item
        android:id="@+id/navigation_preferences"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/title_preferences" />

</menu>
