<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/scanner_dialog_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pattern" />

    <TextView
        android:id="@+id/scanner_dialog_product_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/scanner_dialog_product_name_label_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanner_dialog_image"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/scanner_dialog_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/scanner_dialog_product_name_value_text_view"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/scanner_dialog_product_name_label"
        app:layout_constraintTop_toTopOf="@+id/scanner_dialog_product_name_label"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/scanner_dialog_generic_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/scanner_dialog_generic_name_label_text_view"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanner_dialog_product_name_label"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/scanner_dialog_generic_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/scanner_dialog_generic_name_value_text_view"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/scanner_dialog_product_name_label"
        app:layout_constraintTop_toTopOf="@+id/scanner_dialog_generic_name_label"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/scanner_dialog_brand_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/scanner_dialog_brand_label_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanner_dialog_generic_name_label"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/scanner_dialog_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/scanner_dialog_brand_value_text_view"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/scanner_dialog_brand_label"
        app:layout_constraintTop_toTopOf="@id/scanner_dialog_brand_label"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/scanner_dialog_code_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/scanner_dialog_code_label_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scanner_dialog_brand_label"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/scanner_dialog_code_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/scanner_dialog_code_value_text_view"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/scanner_dialog_brand_label"
        app:layout_constraintTop_toTopOf="@id/scanner_dialog_code_label"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/scanner_dialog_data_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/scanner_alert_dialog_data_source_label"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scanner_dialog_code_label" />

</androidx.constraintlayout.widget.ConstraintLayout>