<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless">

    <ImageView
        android:id="@+id/image_view_expiring_product_list_item_category"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_restaurant_menu_24" />

    <TextView
        android:id="@+id/text_view_expiring_product_list_item_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/category_name_placeholder"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/progressBar_expiring_item"
        app:layout_constraintStart_toEndOf="@+id/image_view_expiring_product_list_item_category"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_expiring_product_list_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/product_name_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/progressBar_expiring_item"
        app:layout_constraintStart_toStartOf="@+id/text_view_expiring_product_list_item_category" />

    <ProgressBar
        android:id="@+id/progressBar_expiring_item"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:indeterminate="false"
        android:inputType="date"
        android:max="100"
        android:minWidth="100dp"
        android:minHeight="20dp"
        android:progress="10"
        android:progressBackgroundTint="?attr/colorSecondary"
        android:progressTint="?attr/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/expiring_item_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/days_remaining_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toTopOf="@+id/progressBar_expiring_item"
        app:layout_constraintEnd_toEndOf="@+id/progressBar_expiring_item"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>