<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.pantry.ProductProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/category_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pattern" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expiringLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false">

            <TextView
                android:id="@+id/expiring_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="10 giorni rimanenti"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />

            <TextView
                android:id="@+id/expiring_date_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:text="dd/mm/yyyy"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/purchase_date_value_text_view" />

            <TextView
                android:id="@+id/purchase_date_value_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="dd/mm/yyyy"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/expiring_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/expiring_product_profile"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="10dp"
                app:layout_constraintEnd_toEndOf="@+id/expiring_date_value_text_view"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />

            <TextView
                android:id="@+id/purchase_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/purchase_date_product_profile"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="10dp"
                app:layout_constraintStart_toStartOf="@+id/purchase_date_value_text_view"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:inputType="date"
                android:max="100"
                android:progress="10"
                android:progressBackgroundTint="?attr/colorSecondary"
                android:progressTint="?attr/colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/purchase_date_value_text_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.MyTheme.CardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="150dp"
            app:cardBackgroundColor="?attr/colorSurface">

            <LinearLayout
                android:id="@+id/product_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/product_name_text_view"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="?attr/colorOnSurface"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/add_shopping_list_image"
                        style="@style/Widget.AppCompat.ActionButton"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/baseline_add_shopping_cart_24" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/category_text_view"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:text="@string/category_product_profile"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="?attr/colorOnSurface"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/category_value_text_view"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:text="Pasta e riso"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="?attr/colorOnSurface"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/quantity_text_view"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:text="@string/quantity_product_profile"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="?attr/colorOnSurface"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/quantity_value_text_view"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:text="2Kg"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/brand_text_view"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:text="@string/brand_product_profile"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="?attr/colorOnSurface"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/brand_value_text_view"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:text="De cecco"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="?attr/colorOnSurface"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>
</ScrollView>